# OptiMol

./: .env.example  .gitignore  README.md  best_candidate.smiles  candidate.sdf  environment.yml  pyproject.toml  requirements.txt
1_generative_rl_model/src/: model_trainer.py  property_calculator.py
3_validation_docking/: main.py
3_validation_docking/src/: docking_runner.py  results_analyzer.py
optimol/models/: generator_rnn.py  generator_transformer.py  kan_layer.py  predictor_gnn.py
optimol/utils/: chemistry.py  curation.py  graph_utils.py  sota_metrics.py  tokenizer.py
scripts/: collect_data.py  docking_prep.py  download_pretrain_data.py  evaluate_final.py  final_sota_selection.py  fine_tune_generator.py  generate_sota_report.py  generate_sota_report_v2.py  prep_ligand.py  prepare_dataset.py  pretrain_generator.py  pretrain_transformer.py  sample_molecules.py  sota_generator.py  train_gnn_predictor.py  train_rl.py  train_rl_transformer.py  visualize_results.py
