[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimol"
version = "0.1.0"
description = "SOTA Molecular Generator for KEAP1 inhibitors"
dependencies = [
    "rdkit",
    "pandas",
    "numpy",
    "loguru",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["optimol*"]
